--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -159,24 +159,81 @@ jobs:
           exit 1
         }
         
-        # Copy all .gha files and their dependencies
-        Get-ChildItem -Path $buildDir -Recurse -Include "*.gha","*.dll" -Exclude "*Rhino*","*Grasshopper*" | 
-          ForEach-Object {
-            $relativePath = $_.FullName.Replace("$((Get-Location).Path)\$buildDir\", "")
-            $targetPath = Join-Path $outputDir $relativePath
-            $targetDir = Split-Path -Parent $targetPath
+        # Define the target platforms
+        $platforms = @("net48", "net7.0-windows", "net7.0")
+        
+        # Copy only .gha and .dll files directly from each platform folder (not recursive)
+        foreach ($platform in $platforms) {
+          $platformPath = Join-Path $buildDir $platform
+          
+          if (Test-Path $platformPath) {
+            Write-Host "Processing platform: $platform"
             
-            if (!(Test-Path $targetDir)) {
-              New-Item -ItemType Directory -Force -Path $targetDir
-            }
+            # Create the target directory
+            $targetPlatformPath = Join-Path $outputDir $platform
+            New-Item -ItemType Directory -Force -Path $targetPlatformPath
             
-            Write-Host "Copying $($_.FullName) to $targetPath"
-            Copy-Item $_.FullName -Destination $targetPath
+            # Copy only .gha and .dll files directly in the platform folder (not recursive)
+            Get-ChildItem -Path $platformPath -File -Include "*.gha","*.dll" -Exclude "*Rhino*","*Grasshopper*" | 
+              ForEach-Object {
+                $targetFile = Join-Path $targetPlatformPath $_.Name
+                Write-Host "Copying $($_.FullName) to $targetFile"
+                Copy-Item $_.FullName -Destination $targetFile -Force
+              }
+          } else {
+            Write-Host "Platform folder $platformPath not found, skipping"
           }
+        }
         
         # List all copied files for verification
         Write-Host "Files copied to artifacts directory:"
         Get-ChildItem -Path $outputDir -Recurse | Select-Object FullName
+
+    - name: Validate build artifacts
+      shell: pwsh
+      run: |
+        # Count the number of .csproj files in the solution
+        $csprojCount = (Get-ChildItem -Path "." -Recurse -Filter "*.csproj" | 
+                        Where-Object { $_.Name -like "SmartHopper.*" -and $_.Name -notlike "*.Test*" -and $_.Name -notlike "*Template*" } | 
+                        Measure-Object).Count
+        
+        Write-Host "Found $csprojCount SmartHopper .csproj files in the solution"
+        
+        # Define the target platforms
+        $platforms = @("net48", "net7.0-windows", "net7.0")
+        $missingFiles = $false
+        
+        foreach ($platform in $platforms) {
+          $platformPath = Join-Path "artifacts" $platform
+          
+          if (Test-Path $platformPath) {
+            # Count SmartHopper DLL and GHA files in the platform folder
+            $smartHopperFileCount = (Get-ChildItem -Path $platformPath -File | 
+                                    Where-Object { ($_.Name -like "SmartHopper.*.dll" -or $_.Name -like "SmartHopper.*.gha") -and 
+                                                  $_.Name -notlike "*.Test*" -and $_.Name -notlike "*Template*" } | 
+                                    Measure-Object).Count
+            
+            Write-Host "Found $smartHopperFileCount SmartHopper DLL/GHA files in $platform folder"
+            
+            # Verify that we have the expected number of files
+            if ($smartHopperFileCount -lt $csprojCount) {
+              Write-Host "##[error] Missing SmartHopper files in $platform folder! Expected at least $csprojCount files but found only $smartHopperFileCount."
+              Write-Host "##[error] This could indicate that some projects failed to build or weren't copied correctly."
+              Write-Host "Files found in $platformPath:"
+              Get-ChildItem -Path $platformPath -File | ForEach-Object { Write-Host "  - $($_.Name)" }
+              $missingFiles = $true
+            }
+          } else {
+            Write-Host "##[warning] Platform folder ${platformPath} not found, skipping validation"
+          }
+        }
+        
+        if ($missingFiles) {
+          Write-Host "##[error] Build validation failed: Missing expected SmartHopper files in one or more platform folders."
+          exit 1
+        } else {
+          Write-Host "##[notice] Build validation successful: All expected SmartHopper files are present."
+        }
 
     - name: Create ZIP Archives
       if: steps.determine_version.outputs.IS_RELEASE == 'true'
@@ -198,8 +255,9 @@ jobs:
           
           if (Test-Path $platformPath) {
             Write-Host "Creating zip for ${platform}: ${zipName}"
+            
             # Create zip directly from the platform folder contents (not the folder itself)
-            Compress-Archive -Path "$platformPath\*" -DestinationPath $zipName
+            Compress-Archive -Path "$platformPath\*" -DestinationPath $zipName -Force
             $zipPaths += $zipName
           } else {
             Write-Host "Platform folder ${platformPath} not found, skipping"
