fix(workflows): release-build was accidentally excluding some required dlls

--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -180,8 +180,7 @@ jobs:
             # Copy only .gha and .dll files directly in the platform folder (not recursive)
             $filesCopied = 0
             Get-ChildItem -Path $platformPath -File | 
-              Where-Object { ($_.Extension -eq ".dll" -or $_.Extension -eq ".gha") -and 
-                           (-not ($_.Name -like "*Rhino*" -or $_.Name -like "*Grasshopper*")) } |
+              Where-Object { ($_.Extension -eq ".dll" -or $_.Extension -eq ".gha") } |
               ForEach-Object {
                 $targetFile = Join-Path $targetPlatformPath $_.Name
                 Write-Host "Copying $($_.FullName) to $targetFile"
@@ -232,7 +231,7 @@ jobs:
           
           # Check build directory first
           if (Test-Path $buildPlatformPath) {
-            $buildDirFiles = Get-ChildItem -Path $buildPlatformPath -File -Include "*.gha","*.dll" -Exclude "*Rhino*","*Grasshopper*"
+            $buildDirFiles = Get-ChildItem -Path $buildPlatformPath -File -Include "*.gha","*.dll"
             $smartHopperBuildFiles = $buildDirFiles | Where-Object { 
               ($_.Name -like "SmartHopper.*.dll" -or $_.Name -like "SmartHopper.*.gha") -and 
               $_.Name -notlike "*.Test*" -and $_.Name -notlike "*Template*" 
