--- a/src/SmartHopper.Components.Test/SmartHopper.Components.Test.csproj
+++ b/src/SmartHopper.Components.Test/SmartHopper.Components.Test.csproj
@@ -28,7 +28,7 @@
     <PackageReference Include="Grasshopper" Version="8.13.24317.13001" ExcludeAssets="runtime">
       <Source>https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages</Source>
     </PackageReference>
-    <PackageReference Include="RhinoCommon" Version="8.13.24317.13001">
+    <PackageReference Include="RhinoCommon" Version="8.13.24317.13001" ExcludeAssets="runtime">
       <Source>https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages</Source>
     </PackageReference>
 	<PackageReference Include="System.Resources.Extensions" Version="7.0.0" />
