--- a/src/SmartHopper.Core.Grasshopper/SmartHopper.Core.Grasshopper.csproj
+++ b/src/SmartHopper.Core.Grasshopper/SmartHopper.Core.Grasshopper.csproj
@@ -27,7 +27,7 @@
     <PackageReference Include="Grasshopper" Version="8.13.24317.13001" ExcludeAssets="runtime">
       <Source>https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages</Source>
     </PackageReference>
-    <PackageReference Include="RhinoCommon" Version="8.13.24317.13001">
+    <PackageReference Include="RhinoCommon" Version="8.13.24317.13001" ExcludeAssets="runtime">
       <Source>https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages</Source>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
