--- a/src/SmartHopper.Menu/SmartHopper.Menu.csproj
+++ b/src/SmartHopper.Menu/SmartHopper.Menu.csproj
@@ -30,7 +30,7 @@
 		<PackageReference Include="Grasshopper" Version="8.13.24317.13001" ExcludeAssets="runtime">
 			<Source>https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages</Source>
 		</PackageReference>
-		<PackageReference Include="RhinoCommon" Version="8.13.24317.13001">
+		<PackageReference Include="RhinoCommon" Version="8.13.24317.13001" ExcludeAssets="runtime">
 			<Source>https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages</Source>
 		</PackageReference>
 		<PackageReference Include="System.Text.Json" Version="8.0.5" />
