--- a/.editorconfig
+++ b/.editorconfig
@@ -20,7 +20,7 @@ insert_final_newline = false
 # Organize usings
 dotnet_separate_import_directive_groups = false
 dotnet_sort_system_directives_first = false
-file_header_template = unset
+file_header_template = "// <copyright file=\"{fileName}\" company=\"Architect's Toolkit (RKTK.tools)\">\n// Copyright (c) {year} Marc Roca Musach\n// </copyright>"
 
 # this. and Me. preferences
 dotnet_style_qualification_for_event = false
