--- a/src/SmartHopper.Components.Test/SmartHopper.Components.Test.csproj
+++ b/src/SmartHopper.Components.Test/SmartHopper.Components.Test.csproj
@@ -14,7 +14,7 @@
   <PropertyGroup>
     <Version>$(SolutionVersion)</Version>
     <Title>SmartHopper Components Test</Title>
-    <Company>Architect's Toolkit (RKTK.tools) + SmartHopper Community</Company>
+    <Company>Architect's Toolkit (RKTK.tools)</Company>
     <Description>Test components for SmartHopper</Description>
     <Authors>Marc Roca Musach + SmartHopper Community</Authors>
     <Copyright>Copyright (c) 2024 Marc Roca Musach</Copyright>
