--- a/src/SmartHopper.Core.Grasshopper/SmartHopper.Core.Grasshopper.csproj
+++ b/src/SmartHopper.Core.Grasshopper/SmartHopper.Core.Grasshopper.csproj
@@ -13,7 +13,7 @@
   <PropertyGroup>
     <Version>$(SolutionVersion)</Version>
     <Title>SmartHopper Core Grasshopper</Title>
-    <Company>Architect's Toolkit (RKTK.tools) + SmartHopper Community</Company>
+    <Company>Architect's Toolkit (RKTK.tools)</Company>
     <Description>Grasshopper core functionality for SmartHopper</Description>
     <Authors>Marc Roca Musach + SmartHopper Community</Authors>
     <Copyright>Copyright (c) 2024 Marc Roca Musach</Copyright>
