--- a/.github/workflows/github-pr-validation.yml
+++ b/.github/workflows/github-pr-validation.yml
@@ -50,6 +50,30 @@ jobs:
           echo "- Patch: ${{ steps.version-check.outputs.patch }}"
           echo "- Suffix: ${{ steps.version-check.outputs.suffix }}"
 
+  header-check:
+    name: 🛡️ Header Check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
+        with:
+          fetch-depth: 0
+      - name: Validate File Headers
+        uses: ./.github/actions/code-style/header-fixer
+        with:
+          mode: check
+
+  namespace-check:
+    name: 📂 Namespace Check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
+        with:
+          fetch-depth: 0
+      - name: Validate Namespaces
+        uses: ./.github/actions/code-style/namespace-fixer
+        with:
+          mode: check
+
   changelog-check:
     name: 📝 Changelog Check
     runs-on: ubuntu-latest
