--- a/.github/workflows/user-update-branch.yml
+++ b/.github/workflows/user-update-branch.yml
@@ -152,12 +152,23 @@ jobs:
             fi
           else
             echo "Updating specific path: $FILTER"
-            git checkout origin/$ORIGIN -- "$FILTER"
-            if git diff --quiet; then
-              echo "No changes to merge for path $FILTER."
+            # First check if there are any differences in the specified path between branches
+            if ! git diff --name-only origin/$TARGET..origin/$ORIGIN -- "$FILTER" | grep -q .; then
+              echo "No changes to merge for path $FILTER between branches."
               echo "status=no_changes" >> $GITHUB_OUTPUT
               exit 0
             fi
+            
+            # Checkout the files from the origin branch
+            git checkout origin/$ORIGIN -- "$FILTER"
+            
+            # Check if the checkout resulted in any changes to the working directory
+            if git diff --quiet; then
+              echo "No changes to merge for path $FILTER after checkout."
+              echo "status=no_changes" >> $GITHUB_OUTPUT
+              exit 0
+            fi
+            
             echo "Committing changes for path $FILTER"
             git add "$FILTER"
             git commit -m "chore(branch): update $TARGET from $ORIGIN for path $FILTER"
