refactor(workflow): renamed github-pr-... to pr-... and add permissions to user-code-style

--- a/.github/workflows/user-code-style.yml
+++ b/.github/workflows/user-code-style.yml
@@ -1,9 +1,7 @@
 name: 👤🖌️ Fix Code Style
+permissions:
+  contents: write
 on:
-  pull_request:
-    branches:
-      - main
-      - dev
   workflow_dispatch:
 
 jobs:
