--- a/.github/actions/code-style/action.yml
+++ b/.github/actions/code-style/action.yml
@@ -15,9 +15,14 @@ runs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '7.0.x'
     - name: Run dotnet-format
       shell: bash
       run: |
+        dotnet restore
         dotnet tool install -g dotnet-format || true
         export PATH="$HOME/.dotnet/tools:$PATH"
         if [ "${{ inputs.mode }}" = "check" ]; then
