--- a/.github/actions/code-style/namespace-fixer/action.yml
+++ b/.github/actions/code-style/namespace-fixer/action.yml
@@ -25,8 +25,9 @@ runs:
         ERR=0
         for file in $FILES; do
           if [ -f "$file" ]; then
-            # derive namespace from file path without file name
-            fp=${file#src/}
+            # normalize path: strip leading './' and 'src/'
+            fp=${file#./}
+            fp=${fp#src/}
             fp_no_ext=${fp%.*}
             dir=${fp_no_ext%/*}
             ns=${dir//\//.}
