--- a/.github/workflows/user-update-branch.yml
+++ b/.github/workflows/user-update-branch.yml
@@ -24,6 +24,10 @@ on:
         description: 'Target branch (to be updated)'
         required: true
         type: string
+      filter:
+        description: 'Specific folder to update (e.g., .github or src/SmartHopper.Components). Leave blank to update all code.'
+        required: false
+        type: string
 
 permissions:
   contents: write
@@ -129,6 +133,23 @@ jobs:
       - name: Attempt merge
         id: attempt-merge
         run: |
+          ORIGIN=${{ github.event.inputs.origin_branch }}
+          TARGET=${{ github.event.inputs.target_branch }}
+          FILTER=${{ github.event.inputs.filter }}
+          if [[ -n "$FILTER" ]]; then
+            echo "Updating specific path: $FILTER"
+            git checkout origin/$ORIGIN -- "$FILTER"
+            if git diff --quiet; then
+              echo "merge_status=no_changes" >> $GITHUB_OUTPUT
+              echo "No changes to merge for path $FILTER."
+            else
+              git add "$FILTER"
+              git commit -m "chore(branch): update $TARGET from $ORIGIN for path $FILTER"
+              echo "merge_status=success" >> $GITHUB_OUTPUT
+            fi
+            exit 0
+          fi
+
           # Try to merge origin into temp branch
           if git merge origin/${{ github.event.inputs.origin_branch }} --no-ff; then
             echo "merge_status=success" >> $GITHUB_OUTPUT
